--- a/index.html
+++ b/index.html
@@ -1,19 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Your favourite music app</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <ul>
-            <li class = "brand"><img src="spotify-logo-transparent-free-png.webp" alt="Spotify">Spotify</li>
+            <li class="brand"><img src="spotify-logo-transparent-free-png.webp" alt="Spotify">Spotify</li>
             <li>About</li>
             <li>Home</li>
         </ul>
     </nav>
+
+    <div class="container">
+
+        <div class="songList">
+            <h1>Sample music - No Copyright</h1>
+            <div calss = "songItemContainer">
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+
+                <div class="songItem">
+                    <img src="cover_pic.jpg" alt="cover pic">
+                    <span>Sample song 1</span>
+                    <span class="songplaylist"><span class="timeStamp">01:34 <i
+                                class="fas fa-play-circle"></i></span></i></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="songbanner"></div>
+
+
+    </div>
+
+    <div class="bottom">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <div class="icons">
+            <!-- fontawesome icons -->
+            <i class="fas fa-3x fa-step-backward"></i>
+            <i class="fas fa-3x fa-play-circle"></i>
+            <i class="fas fa-3x fa-step-forward"></i>
+        </div>
+        <div class="songInfo">
+            <img src="song_playing_gif.gif" width="42px" alt=""> Sample music 1
+        </div>
+    </div>
+
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/c96882e94c.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
