--- a/index.html
+++ b/index.html
@@ -21,55 +21,62 @@
 
         <div class="songList">
             <h1>Sample music - No Copyright</h1>
-            <div calss = "songItemContainer">
+            <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timestamp"> 05:34 <i id="0" class="fas songItemPlay songItemPlay fa-play-circle"></i> </span></span>
                 </div>
 
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="1" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="2" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="3" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="4" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="5" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
                 </div>
 
                 <div class="songItem">
-                    <img src="cover_pic.jpg" alt="cover pic">
-                    <span>Sample song 1</span>
-                    <span class="songplaylist"><span class="timeStamp">01:34 <i
-                                class="fas fa-play-circle"></i></span></i></span>
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="6" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
                 </div>
+
+                <div class="songItem">
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="7" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
+                </div>
+
+                <div class="songItem">
+                    <img alt="cover pic">
+                    <span class="songName"> song 1</span>
+                    <span class="songlistplay"><span class="timeStamp"> 0.0 <i id ="8" class="fas songItemPlay songItemPlay fa-play-circle"></i></span></span>
+                </div>
+
+
             </div>
         </div>
 
@@ -79,15 +86,15 @@
     </div>
 
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min="0" max="100">
+        <input type="range" name="range" id="myProgressBar" min="0" max="100" value='0'>
         <div class="icons">
             <!-- fontawesome icons -->
             <i class="fas fa-3x fa-step-backward"></i>
-            <i class="fas fa-3x fa-play-circle"></i>
+            <i class="fas fa-3x fa-play-circle" id='masterPlay'></i>
             <i class="fas fa-3x fa-step-forward"></i>
         </div>
         <div class="songInfo">
-            <img src="song_playing_gif.gif" width="42px" alt=""> Sample music 1
+            <img src="song_playing_gif.gif" width="42px" alt="" id="gif"> Sample music 1
         </div>
     </div>
 
