--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify - Your favourite music app</title>
+    <title>Snotify - Your favourite music app</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="spotify-logo-transparent-free-png.webp">
 </head>
 
 <body>
     <nav>
         <ul>
-            <li class="brand"><img src="spotify-logo-transparent-free-png.webp" alt="Spotify">Spotify</li>
+            <li class="brand"><img src="spotify-logo-transparent-free-png.webp" alt="Snotify">Snotify</li>
             <li>About</li>
             <li>Home</li>
         </ul>
@@ -83,7 +84,7 @@
                     <span class="songName"> song 1</span>
                     <span class="songlistplay"><span class="timeStamp"> 0.0 <i id="8"
                                 class="fas songItemPlay fa-play-circle"></i></span></span>
-                </di
+                    </div>
 
 
             </div>
